# leak-guard

./: .gitignore  .keytrap.example.yml  .pre-commit-hooks.yaml  LICENSE  README.md  action.yml  benchmark.py  benchmark_compare.py  pyproject.toml
.github/workflows/: ci.yml
src/keytrap/: __init__.py  __main__.py  cli.py  custom.py  entropy.py  history.py  patterns.py  reporter.py  scanner.py
src/leak_guard/: __init__.py  cli.py  patterns.py  reporter.py  scanner.py
tests/: test_patterns.py
