[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leak-guard"
version = "0.1.0"
description = "Lightweight secret detection tool with Korean service API key patterns"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["security", "secret-detection", "pre-commit", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
leak-guard = "leak_guard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/leak_guard"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.urls]
Homepage = "https://github.com/undo/leak-guard"
Repository = "https://github.com/undo/leak-guard"
