[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keytrap"
version = "1.0.0"
description = "Lightweight, extensible secret detection that actually catches secrets. Zero dependencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["security", "secret-detection", "pre-commit", "git", "leak", "credentials", "keytrap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[project.scripts]
keytrap = "keytrap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/keytrap"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.urls]
Homepage = "https://github.com/cobyoo/keytrap"
Repository = "https://github.com/cobyoo/keytrap"
Issues = "https://github.com/cobyoo/keytrap/issues"
